feat: Adding the new config structure at the microservices.

--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -14,3 +14,16 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+
+build:
+  version: 3.0.0
+
+cards:
+  message: "Welcome to EazyBank Accounts Microservice!"
+  contactDetails:
+    email: "leonepgabriel@gmail.com"
+    name: "Gabriel Leone - Developer"
