--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 server:
   port: 8080
 
@@ -16,3 +15,20 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+#  profiles:
+#    active:
+##      - "qa"
+#      - "prod"
+
+build:
+  version: 3.0.0
+
+accounts:
+  message: "Welcome to EazyBank Accounts Microservice!"
+  contactDetails:
+    email: "leonepgabriel@gmail.com"
+    name: "Gabriel Leone - Developer"
