--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -1,29 +1,33 @@
 server:
   port: 9000
+
 spring:
+  application:
+    name: "loans"
+  profiles:
+    active: "qa"
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
+    url: "jdbc:postgresql://localhost:5434/loansdb"
+    username: "gabriel"
+    password: "1234"
   h2:
     console:
       enabled: true
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
     show-sql: true
   config:
-    import:
-      - "application_qa.yml"
-      - "application_prod.yml"
+    import: "optional:configserver:http://localhost:8071"
+  rabbitmq:
+    host: "localhost"
+    port: 5672
+    username: "guest"
+    password: "guest"
 
-build:
-  version: 3.0.0
-
-loans:
-  message: "Welcome to EazyBank Accounts Microservice!"
-  contactDetails:
-    email: "leonepgabriel@gmail.com"
-    name: "Gabriel Leone - Developer"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
